css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Reem+Kufi&display=swap');
/* 
font-family: 'Poppins', sans-serif;
font-family: 'Reem Kufi', sans-serif; */

* {
  outline: none;
  box-shadow: none;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

body {
  padding: 0;
  margin: 0;
}

:root {
  --yellow: #FFCE54;
  --yellowOpacity: #ffcf54e0;
  --dark: rgba(0,0,0,0.8);
  --grey: #535353;
  --greyOpacity: rgba(255,255,255,0.2);
  --white: white;
}

.opacity {
  background: rgba(0,0,0,0.1);
}

.hr {
  max-width: 500px;
  height: 2px;
  border-radius: 20px;
  background: var(--yellow);
  margin: 0 auto;
  margin-top: 50px;
}

nav {
  width: 100%;
  background: transparent;
  display: flex;
  justify-content: space-between;
  background: var(--yellow);
  padding: 0 50px;
  position: relative;
  z-index: 999;
}

nav button {
  position: absolute;
  top: 25px;
  right: 35px;
  border: none;
  background: transparent;
  cursor: pointer;
  float: right;
  display: none;
}

nav button img {
  width: 35px;
  height: 35px;
}

nav h2 {
  font-family: 'Reem Kufi', sans-serif;
  text-transform: uppercase;
  font-size: 30px;
  color: var(--white);
  letter-spacing: 2px;
  font-weight: normal;
}

nav ul {
  list-style: none;
}

nav ul li {
  display: inline-block;
  line-height: 57px;
  margin: 0 25px;
}

nav ul li a {
  text-decoration: none;
  color: var(--white);
  font-size: 19px;
}

.introduction {
  background: var(--yellow);
  background-image: url(../assets/images/initial_bg.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 50%;
  padding: 25px 0;
  text-align: right;
}

.introduction img {
  margin-right: 170px;
  padding-top: 120px;
  padding-bottom: 50px;
  max-width: 650px;
  width: 100%;
}

.about {
  margin-top: 80px;
  padding: 0 40px;
  padding-bottom: 60px;
}

.about .row {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.about .row section img {
  max-width: 500px;
  width: 100%;
}

.about .row section:nth-child(1) {
  padding-right: 40px;
}

.about .row section:nth-child(2) {
  text-align: center;
}

.about .row section h4 {
  padding-bottom: 3px;
  border-bottom: 1px solid var(--yellow);
  color: var(--dark);
  font-size: 26px;
  font-weight: normal;
  margin-bottom: 0;
}

.about .row section p {
  margin-top: 30px;
  font-size: 17px;
}

.timeline {
  margin-top: 100px;
}

.timeline h3 {
  font-size: 40px;
  font-weight: normal;
  text-align: center;
  margin-bottom: 130px;
  color: var(--dark);
}

.timeline h3 span {
  color: var(--yellow);
}

.functions {
  padding: 40px 50px;
  margin-top: 120px;
  background: var(--yellow);
}

.functions h3 {
  color: var(--grey);
  margin-top: 10px;
  margin-bottom: 80px;
  font-size: 40px;
  font-weight: normal;
  text-transform: uppercase;
  text-align: center;
}

.functions .row {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 70px;
}

.functions .row .item {
  text-align: center;
  color: var(--grey);
  font-size: 17px;
}

.functions .row .item img {
  width: 90px;
  height: 90px;
  margin-bottom: 15px;
}

.functions .row .item:last-child img {
  width: 100px;
}

.team {
  padding: 40px 50px;
}

.team h3 {
  color: var(--grey);
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 40px;
  font-weight: normal;
  text-transform: uppercase;
  text-align: center;
  padding-bottom: 7px;
  max-width: 250px;
  width: 100%;
  margin: 0 auto;
  border-bottom: 1px solid var(--yellow);
}

.team p {
  color: var(--grey);
  font-size: 17px;
  text-align: center;
}

.team p span {
  color: var(--yellow);
}

.team .row {
  margin-top: 70px;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-gap: 50px;
}

.team .row .item {
  border-radius: 50%;
  background: url(../assets/images/Henrique.png);
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-size: cover;
  height: 200px;
  max-width: 200px;
  width: 100%;
}

.team .row .item:nth-child(2) {
  background: url(../assets/images/Thiemi.png);
}

.team .row .item:nth-child(3) {
  background: url(../assets/images/P.Paulo.png);
}

.team .row .item:nth-child(4) {
  background: url(../assets/images/Otavio.png);
}

.team .row .item:nth-child(5) {
  background: url(../assets/images/P.Salviti.png);
}

.team .row .item section {
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.4);
  opacity: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--white);
  transition: all .3s ease;
  border-radius: 50%;
}

.team .row .item section:hover {
  transition: all .3s ease;
  opacity: 1;
}

.galery {
  background: var(--grey);
  padding: 30px 10px;
  padding-bottom: 60px;
  margin-top: 50px;
}

.galery h3 {
  color: var(--white);
  margin: 10px 0;
  font-size: 40px;
  font-weight: normal;
  text-transform: uppercase;
  text-align: center;
}

.galery .carousel {
  display: flex;
  padding-top: 50px;
  overflow-x: scroll;
  padding-bottom: 30px;
}

.galery .carousel img:nth-child(1) {
  margin-left: 30px;
}

.galery .carousel img {
  width: 400px;
  border: 8px solid var(--white);
  margin-right: 30px;
  height: 100%;
  max-height: 250px;
  transition: all .3s ease;
}

.galery .carousel img:hover {
  transform: scale(1.1);
  transition: all .3s ease;
}

/* Scrollbar */
::-webkit-scrollbar {
  width: 7px;
  height: 5px;
  background: var(--greyOpacity);
  border-radius: 15px;
}

::-webkit-scrollbar-thumb {
  background: var(--yellowOpacity);
  border-radius: 15px;
  transition: all .2s ease;
}

::-webkit-scrollbar-thumb:hover {
  background: var(--yellow);
  transition: all .2s ease;
}
/* Scrollbar */

.contact {
  margin: 30px;
}

.contact h3 {
  color: var(--grey);
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 40px;
  font-weight: normal;
  text-transform: uppercase;
  text-align: center;
  padding-bottom: 7px;
  max-width: 250px;
  width: 100%;
  margin: 0 auto;
  border-bottom: 1px solid var(--yellow);
}

.contact p {
  color: var(--grey);
  font-size: 17px;
  text-align: center;
}

.contact form {
  margin: 0 auto;
  margin-top: 70px;
  max-width: 1000px;
  width: 100%;
}

.contact form .row {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 40px;
  margin-bottom: 30px;
}

.contact form label {
  font-size: 19px;
  color: var(--grey);
  margin-bottom: 10px;
}

.contact form input {
  width: 100%;
  border: none;
  border: 1px solid var(--grey);
  border-radius: 5px;
  padding: 8px 15px;
  color: var(--grey);
  margin-top: 10px;
  font-size: 16px;
}

.contact form textarea {
  min-height: 150px;
  resize: none;
  width: 100%;
  border: none;
  border: 1px solid var(--grey);
  border-radius: 5px;
  padding: 8px 15px;
  color: var(--grey);
  margin-top: 10px;
  font-size: 16px;
}

.contact form button {
  margin-top: 20px;
  background: var(--yellow);
  border-radius: 5px;
  border: none;
  color: var(--white);
  font-size: 19px;
  padding: 5px 60px;
  cursor: pointer;
}


@media(max-width: 1300px) {
  .team .row {
    grid-template-columns: repeat(3, 1fr);
  }

  .team .row .item {
    margin: 0 auto;
  }
}

@media(max-width: 1050px) {
  header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background: transparent;
  }

  nav {
    position: absolute;
    top: 0;
    width: 100%;
    padding: 0 50px;
    display: block;
    margin-top: 0;
    overflow: hidden;
  }

  nav button {
    display: block;
  }

  nav h2 {
    margin-top: 20px;
    margin-bottom: 5px;
  }

  nav ul {
    padding: 0;
    margin: 0;
    padding-bottom: 10px;
    max-height: 0;
    transition: all .5s ease;
  }

  .show_ul {
    max-height: 400px;
    transition: all .5s ease;
  }

  nav ul li {
    display: block;
    line-height: 57px;
    margin: 0;
  }

  nav ul li a {
    text-decoration: none;
    color: var(--white);
    font-size: 19px;
  }

  .introduction {
    padding: 0;
    margin-top: 80px;
    display: block;
  }

  .introduction img {
    max-width: 500px;
  }
}

@media(max-width: 900px) {
  .about .row {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
  }

  .about .row section img {
    max-width: 500px;
    width: 100%;
  }

  .about .row section:nth-child(1) {
    padding-right: 0;
  }

  .about .row section:nth-child(2) {
    margin-top: 50px;
  }

  /* Scrollbar */
  ::-webkit-scrollbar {
    height: 7px;
  }
  /* Scrollbar */
  
  .galery .carousel img {
    width: 350px;
    max-height: 220px;
  }
}

@media(max-width: 850px) {
  .introduction {
    margin-top: 70px;
    text-align: center;
    background-position: left;
  }

  .introduction img {
    margin: 0;
  }

  .functions .row {
    grid-template-columns: repeat(1, 1fr);
  }

  .functions .row .item p {
    max-width: 400px;
    width: 100%;
    margin: 0 auto;
  }

  .team .row {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media(max-width: 750px) {
  .contact form .row {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media(max-width: 700px) {
  .timeline h3 {
    margin-bottom: 90px;
  }
}

@media(max-width: 600px) {
  .about {
    margin-top: 30px;
    padding: 0 20px;
    padding-bottom: 60px;
  }

  .about .row section h4 {
    font-size: 24px;
  }

  .about .row section p {
    margin-top: 20px;
    font-size: 15px;
  }

  .functions h3, .timeline h3, .team h3, .galery h3, .contact h3 {
    font-size: 27px;
  }
  
  .galery .carousel img {
    width: 300px;
    max-height: 180px;
  }
}

